@@ -1,4 +1,4 @@
-Date: Mon, 18 Jan 2016 10:18:29 +0000
+Date: Thu, 4 Jan 2016 21:47:53 +0000
 Mime-Version: 1.0 (Produced by PhpWiki 1.5.5)
 Content-Type: application/x-phpwiki;
   pagename=ReleaseNotes;
@@ -10,6 +10,7 @@ Content-Transfer-Encoding: binary
 
 == 1.5.6 2016-XX-XX Marc-Etienne Vargenau ==
 
+* Use ##mysqli## instead of ##mysql##
 * Upload plugin: put date and author in history
 
 == 1.5.5 2015-12-11 Marc-Etienne Vargenau ==
